# SandboxDB

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: pre-commit-config.yaml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/buffer_pool/: buffer_pool.rs  error.rs  mod.rs
src/storage/: mod.rs  page.rs  schema.rs  tmp.rs
src/storage/buffer/: buffer_pool.rs  error.rs  mod.rs  page_meta.rs  wal.rs  wal_raw.rs  wal_row.rs
src/storage/buffer_pool/: buffer_pool.rs  catalog.rs  error.rs  mod.rs  page_meta.rs
src/storage/file/: encoding.rs  error.rs  file.rs  file_header.rs  mod.rs  page.rs  page_error.rs  page_header.rs  slot.rs  tuple.rs  tuple_header.rs
src/storage/metastore/: database.rs  encoding.rs  error.rs  meta.rs  metastore.rs  mod.rs  table.rs
src/storage/page/: encoding.rs  mod.rs  page.rs  page_error.rs  page_header.rs  slot.rs  tuple.rs  tuple_header.rs
src/storage/schema/: _type.rs  encoding.rs  error.rs  field.rs  mod.rs  schema.rs  schema_error.rs
src/storage/tablespace/: catalog.rs  database.rs  encoding.rs  error.rs  meta.rs  metastore.rs  mod.rs  table.rs
